@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-26T01:21:15Z",
-  "count_outdated" : 1924,
-  "uniques_outdated" : 1163,
-  "count" : 1939,
-  "uniques" : 1178,
+  "timestamp" : "2025-08-27T01:18:49Z",
+  "count_outdated" : 1926,
+  "uniques_outdated" : 1165,
+  "count" : 1941,
+  "uniques" : 1180,
   "clones" : [
-    {
-      "timestamp": "2025-08-13T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2025-08-14T00:00:00Z",
       "count": 1,
@@ -97,6 +88,15 @@
     },
     {
       "timestamp": "2025-08-26T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-08-27T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
