@@ -3,11 +3,6 @@
   "uniques": 7,
   "clones": [
     {
-      "timestamp": "2025-08-13T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
-    {
       "timestamp": "2025-08-14T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -54,6 +49,11 @@
     },
     {
       "timestamp": "2025-08-26T00:00:00Z",
+      "count": 2,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2025-08-27T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
